Added a git guide page

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
     </div>
     <footer class="copyright">
+        <a href="git-guide.html">Git Started Guide</a>
         <p>&copy; <span id="current-year"></span> Fardin Ahmed. All rights reserved.</p>
     </footer>
     <script src="index.js"></script>
