Project section overhaul

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>My Profile</h1>
     <div class="profile-section">
         <p>
-            Hello, I'm Fardin Ahmed, a committed third-year Computer Science student at Brooklyn College.
+            Hi, I'm Fardin Ahmed, a committed fourth-year Computer Science student at Brooklyn College.
             I specialize in modern programming languages and development tools, I'm driven to create innovative
             solutions that push technological bounderies and enhance the user experience.
         </p>
@@ -31,13 +31,13 @@
 
     <h2>Programming Languages</h2>
     <div class="skills-section">
-        Java, Python, C++, C#, Javascript/HTML/CSS, SQL
+        Python, Java, C#, C++, Javascript/HTML/CSS, Rust, SQL
     </div>
     
     <h2>Frameworks & Development Tools</h2>
     <div class="skills-section">
-        <strong>Frameworks and Libraries:</strong> Django, Spring, ASP.NET, NodeJS, React <br>
-        <strong>Tools:</strong> Docker, Git, GitHub, Maven, Jira, Postman
+        <strong>Frameworks and Libraries:</strong> Django, FastAPI, Spring, ASP.NET, NodeJS, NextJS, React<br>
+        <strong>Tools:</strong> Docker, Nginx, Git, Github Actions Jira, Postman
         <strong>Databases:</strong> MySQL, MongoDB
         <strong>Cloud Platform:</strong> AWS EC2, AWS RDS
     </div>
@@ -45,36 +45,23 @@
     <h2>Projects</h2>
     <div class="projects">
         <div class="project">
-            <img src="https://raw.githubusercontent.com/MysticFardin/mysticfardin.github.io/main/Images/Discord.png" alt="Discord Logo">
-            <h3>Discord Bot</h3>
-            <p>Discord moderation bot made using the Java Discord API (JDA).</p>
-            <a href="https://github.com/MysticFardin/Java-Discord-Bot" class="button">Github</a>
+            <img src="https://raw.githubusercontent.com/MysticFardin/mysticfardin.github.io/main/Images/Penfluence.png" alt="Penfluence Logo">
+            <h3>Penfluence</h3>
+            <p> Machine vision assisted tool to extract handwritten notes and convert into downloadable PDFs</p>
+            <a href="https://github.com/FardinAhmed3/Penfluence" class="button">Github</a>
         </div>
         <div class="project">
-            <img src="https://raw.githubusercontent.com/MysticFardin/mysticfardin.github.io/main/Images/FST%20Logo.png" alt="FST Logo">
-            <h3>Football Statistics Tracker</h3>
-            <p>Full stack project under development using Python, Django, NodeJS, React, MySQL and Postman.</p>
+            <img src="https://raw.githubusercontent.com/MysticFardin/mysticfardin.github.io/main/Images/Goalwise%20Logo.png" alt="Goalwise Logo">
+            <h3>Goalwise</h3>
+            <p>Full stack enterprise project developed using Django, React, MySQL</p>
             <a href="https://github.com/MysticFardin/A-Football-Stat-Tracker" class="button">Github</a>
         </div>
         <div class="project">
-            <img src="https://raw.githubusercontent.com/MysticFardin/mysticfardin.github.io/main/Images/EMS%20Logo.png" alt="EMS Logo">
-            <h3>Employee Management System</h3>
-            <p> Employee Management System built using Java, Spring, Hibernate, Apache Maven, Playwright and MySQL.</p>
+            <img src="https://raw.githubusercontent.com/MysticFardin/mysticfardin.github.io/main/Images/Excilify%20Logo.webp" alt="EMS Logo">
+            <h3>Excilify</h3>
+            <p> Data extraction and visualization tool built to streamline financial records at a project management office </p>
             <a href="https://github.com/MysticFardin/Employee-Management-System" class="button">Github</a>
         </div>
-        
-    <!--<div class="project">
-            <img src="https://raw.githubusercontent.com/MysticFardin/mysticfardin.github.io/main/music-logo.png" alt="Music Note Logo">
-            <h3>My Favorite Songs</h3>
-            <p>Webpage of some of my personal favorite songs.</p>
-            <a href="FavMusicList.html" class="button">Go to the Page</a>
-        </div>
-        <div class="project">
-            <img src="https://github.com/MysticFardin/mysticfardin.github.io/raw/5feaafcfb06d7ed9fa66af75da5dd523422f2c82/Calculator_512.png" alt="Calculator Logo">
-            <h3>Calculator Project</h3>
-            <p>Calculator Webapp made using pure HTML/CSS. One of my earliest projects.</p>
-            <a href="calculator.html" class="button">Go to Calculator</a>
-        </div> --> 
 
     </div>
     <footer class="copyright">
